[gd_scene load_steps=3 format=3 uid="uid://c8jot8f0riaao"]

[ext_resource type="Script" uid="uid://bs3vv4ervpuf8" path="res://autoloads/binary_choice_manager/binary_choice_manager.gd" id="1_7a4q7"]
[ext_resource type="Texture2D" uid="uid://bwl5l2moh0odr" path="res://assets/Chroma-Noir-User-Interface-v1.0/Chroma-Noir-User-Interface-8x8/Frames-and-Banners.png" id="2_k7le2"]

[node name="BinaryChoiceManager" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7a4q7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 160.0
offset_bottom = 29.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 160.0
offset_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="YesFocus" type="NinePatchRect" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("2_k7le2")
region_rect = Rect2(160, 304, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="YesUnfocus" type="NinePatchRect" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_k7le2")
region_rect = Rect2(128, 184, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Confirm" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Yas!"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="NoFocus" type="NinePatchRect" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("2_k7le2")
region_rect = Rect2(160, 304, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NoUnfocus" type="NinePatchRect" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_k7le2")
region_rect = Rect2(128, 184, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Decline" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nay!"
horizontal_alignment = 1
